# bloodcancerdetection

./: README.md  pyproject.toml
hemasight/: config.py  requirements.txt
hemasight/api/: main.py
hemasight/api/routes/: blood_test.py  patients.py
hemasight/api/schemas/: blood_test.py
hemasight/data_pipeline/: consumer.py  kafka_consumer.py  kafka_producer.py  producer.py
hemasight/db/: models.py
hemasight/db/migrations/: 001_hypertables.sql
hemasight/docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.workers  docker-compose.yml
hemasight/frontend/react-dashboard/: index.html  package-lock.json  package.json  vite.config.js
hemasight/frontend/react-dashboard/src/: App.css  App.jsx
hemasight/frontend/react-dashboard/src/api/: client.js
hemasight/frontend/react-dashboard/src/components/: PatientDetail.jsx  PatientList.jsx
hemasight/ml/: anomaly.py  federated.py  inference.py  lstm_model.py  model_training.py
hemasight/ml/data/: sample_training_data.csv
hemasight/ml/models/: .gitkeep
hemasight/workers/: feature_worker.py
