[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hemasight"
version = "0.1.0"
description = "Distributed AI System for Early Blood Cancer Risk Detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pika>=1.3.0",
    "celery[redis]>=5.3.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "torch>=2.0.0",
    "xgboost>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "alembic"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hemasight*"]
